--- a/apps/foo/tsconfig.editor.json
+++ b/apps/foo/tsconfig.editor.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "types": ["jest", "node"]
+    "skipLibCheck": true,
+    "types": ["jest"]
   }
 }
